
accountdir = ${GNC_ACCOUNTS_DIR}/C

account_DATA = \
  acctchrt_brokerage \
  acctchrt_carloan \
  acctchrt_cdmoneymkt \
  acctchrt_childcare \
  acctchrt_common \
  acctchrt_currency \
  acctchrt_eduloan \
  acctchrt_fixedassets \
  acctchrt_homeloan \
  acctchrt_homeown \
  acctchrt_otherloan \
  acctchrt_renter \
  acctchrt_retiremt \
  acctchrt_spouseinc \
  acctchrt_spouseretire

EXTRA_DIST = \
  acctchrt_full \
  acctlist_brokerage \
  acctlist_carloan \
  acctlist_cdmoneymkt \
  acctlist_childcare \
  acctlist_common \
  acctlist_currency \
  acctlist_eduloan \
  acctlist_fixedassets \
  acctlist_full \
  acctlist_homeloan \
  acctlist_homeown \
  acctlist_otherloan \
  acctlist_renter \
  acctlist_retiremt \
  acctlist_spouseinc \
  acctlist_spouseretire

EXTRA_DIST = \
  ${account_DATA} \
  .cvsignore
