
accountdir = ${GNC_ACCOUNTS_DIR}/C

account_DATA = \
  acctchrt_brokerage.gnucash-xea \
  acctchrt_carloan.gnucash-xea \
  acctchrt_cdmoneymkt.gnucash-xea \
  acctchrt_childcare.gnucash-xea \
  acctchrt_common.gnucash-xea \
  acctchrt_eduloan.gnucash-xea \
  acctchrt_fixedassets.gnucash-xea \
  acctchrt_homeloan.gnucash-xea \
  acctchrt_homeown.gnucash-xea \
  acctchrt_otherloan.gnucash-xea \
  acctchrt_renter.gnucash-xea \
  acctchrt_retiremt.gnucash-xea \
  acctchrt_spouseinc.gnucash-xea \
  acctchrt_spouseretire.gnucash-xea

EXTRA_DIST = \
  acctchrt_full.gnucash-xea \
  acctlist_brokerage.gnucash-xea \
  acctlist_carloan.gnucash-xea \
  acctlist_cdmoneymkt.gnucash-xea \
  acctlist_childcare.gnucash-xea \
  acctlist_common.gnucash-xea \
  acctlist_eduloan.gnucash-xea \
  acctlist_fixedassets.gnucash-xea \
  acctlist_full.gnucash-xea \
  acctlist_homeloan.gnucash-xea \
  acctlist_homeown.gnucash-xea \
  acctlist_otherloan.gnucash-xea \
  acctlist_renter.gnucash-xea \
  acctlist_retiremt.gnucash-xea \
  acctlist_spouseinc.gnucash-xea \
  acctlist_spouseretire.gnucash-xea \
  ${account_DATA} \
  .cvsignore
