
accountdir = $(GNC_ACCOUNTS_DIR)/de_AT

dist_account_DATA = \
 acctchrt_auto.gnucash-xea \
 acctchrt_autoloan.gnucash-xea \
 acctchrt_brokerage.gnucash-xea \
 acctchrt_business.gnucash-xea \
 acctchrt_common.gnucash-xea \
 acctchrt_houseown.gnucash-xea \
 acctchrt_investment.gnucash-xea \
 acctchrt_kids.gnucash-xea
